--- a/src/component/form/signin/form.css
+++ b/src/component/form/signin/form.css
@@ -32,8 +32,27 @@ body {
   overflow: hidden;
   transition: all .5s ease;
 }
+
 .frameup{
   height: 725px;
+  width: 430px;
+  background:
+    linear-gradient(
+    rgba(35,43,85,0.75),
+    rgba(35,43,85,0.95)),
+    url(https://dl.dropboxusercontent.com/u/22006283/preview/codepen/clouds-cloudy-forest-mountain.jpg) no-repeat center center;
+  background-size: cover;
+  margin-left: auto;
+  margin-right: auto;
+  border-top: solid 1px rgba(255,255,255,.5);
+  border-radius: 5px;
+  box-shadow: 0px 2px 7px rgba(0,0,0,0.2);
+  overflow: hidden;
+  transition: all .5s ease;
+}
+
+.framecom{
+  height: 625px;
   width: 430px;
   background:
     linear-gradient(
