--- a/frontend/src/component/admin/category/addCategory/addcategory.css
+++ b/frontend/src/component/admin/category/addCategory/addcategory.css
@@ -4,14 +4,14 @@ h2{
 
 .form {
     background-color: rgba(212, 242, 255, 1);
-    padding: 20px;
+    padding: 80px;
     border-radius: 25px;
     display: inline-block;
     text-align: left;
     color: rgb(230, 0, 0);
     width: 1054px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    height: 100%;
+    height: 150%;
     margin: 100px;
 }
 
@@ -24,7 +24,7 @@ h2{
 .button{
     width: 250px;
     border-radius: 50px !important;
-    margin-left: 150px;
+    margin-left: 120px;
     
 }
 .button1{
@@ -35,7 +35,7 @@ h2{
 
 
 
-label{
+.label{
     color: rgb(5, 5, 5) !important;
     text-transform: none;
     font-size: 25px;
