--- a/frontend/src/component/footer/footer.css
+++ b/frontend/src/component/footer/footer.css
@@ -1,6 +1,6 @@
 .site-footer
 {
-  background-color:#eeeeee;
+  background-color:#bbb;
   padding:45px 0 20px;
   font-size:15px;
   line-height:24px;
