Upgrade the footer

--- a/frontend/src/component/footer/footer.css
+++ b/frontend/src/component/footer/footer.css
@@ -1,4 +1,4 @@
-.site-footer
+/* .site-footer
 {
   background-color:#bbb;
   padding:45px 0 20px;
@@ -156,3 +156,4 @@
 li{
   color: black !important;
 }
+ */
