--- a/frontend/src/component/seller/product/prodAddForm/prodAddForm.css
+++ b/frontend/src/component/seller/product/prodAddForm/prodAddForm.css
@@ -6,14 +6,14 @@ h2{
     height: 1800px;
     background-color: rgba(212, 242, 255, 1);
 }
-.image4_add{
+.image_add{
      position: absolute;
     left: 250px;
 }
 
 
-.form4_add {
-      background-color: rgba(255, 255, 255, 0.322);
+.form_add{
+    background-color: rgba(255, 255, 255, 0.322);
     padding: 80px;
     border-radius: 15px!important;
     display: inline-block;
@@ -25,26 +25,28 @@ h2{
     margin: 100px;
 }
 
-.form-control1_add {
+.form-control_add {
     width: 100%;
-    height: 35px;
+    height: 35px!important;
     box-sizing: border-box;
-    border-radius: 3px;
+    border-radius: 1px!important;
 }
-.text1_add{
+.text_add{
     width: 100%;
     box-sizing: border-box;
-    border-radius: 15px !important;
+    border-radius: 1px !important;
+    height: 300px !important;
+    
 }
     
-.button3_add{
+.button_add{
     width: 200px;
     border-radius: 50px !important;
      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.151), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-left: 80px;
     
 }
-.button4_add{
+.button_create_add{
       width: 200px;
     border-radius: 50px !important;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.144), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
