--- a/frontend/src/component/seller/merchant/addProfileDetails/addProfileDetails.css
+++ b/frontend/src/component/seller/merchant/addProfileDetails/addProfileDetails.css
@@ -5,8 +5,9 @@ h2{
 }
 
 .containerFour_add{
+    margin-top: 0px!important;
     width: 100%;
-    height: 1800px;
+    height: 2000px;
     background-color: white;
 }
 
