--- a/frontend/src/component/seller/product/productView/productView.css
+++ b/frontend/src/component/seller/product/productView/productView.css
@@ -30,6 +30,7 @@
 .icon_button{
     margin-left: 15px !important;
     margin-bottom: 20px !important;
+    
 }
 .icon_button_second {
     margin-left: 75px !important;
@@ -57,6 +58,7 @@
     color: rgb(230, 0, 0);
     margin-top: 25px;
     font-size: 50px;
+    font-weight: bold;
     
     
 }
