--- a/frontend/src/component/user/shopping/product.css
+++ b/frontend/src/component/user/shopping/product.css
@@ -93,21 +93,20 @@
 }
 
 .buttons .add-to-cart {
-  padding: 10px 20px;
-  border: 1px solid #f02d34;
-  margin-top: 40px;
-  font-size: 18px;
-  font-weight: 500;
-  background-color: white;
-  color: #f02d34;
-  cursor: pointer;
-  width: 200px;
-  transform: scale(1, 1);
+  margin: 2rem 0;
+  margin-bottom: 3rem;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem 0;
+  min-width: 1024px;
   transition: transform 0.5s ease;
 }
 
 .buttons .add-to-cart:hover {
-  transform: scale(1.1, 1.1)
+  
+  transform: scale(1.05, 1.05)
 }
 
 
@@ -137,3 +136,6 @@
   color: rgb(49, 168, 49);
 
 }
+
+
+
