--- a/frontend/src/component/admin/category/addCategory/addcategory.css
+++ b/frontend/src/component/admin/category/addCategory/addcategory.css
@@ -3,10 +3,18 @@
     height: 1100px;
     background-color: rgba(212, 242, 255, 1);
 }
+.container-cat {
+    padding: center;
+    padding-top: 70px;
+    position: relative;
 
-h2{
-    color: red;
+
+}
+.h2-add{
+    color: rgb(145, 10, 10);
     text-align: left;
+    font-size: 40px;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
 }
 .image3{
      position: absolute;
@@ -25,32 +33,65 @@ h2{
     margin: 100px;
 }
 
-.form-control {
+.form-control-add {
     width: 100%;
     height: 45px;
     box-sizing: border-box;
     border-radius: 50px !important;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
 }
-.button{
+.button-add{
+background-color: #202221;
+    border-radius: 50px;
+    border-width: 0;
+    box-shadow: rgba(25, 25, 25, .04) 0 0 1px 0, rgba(0, 0, 0, .1) 0 3px 4px 0;
+    color: rgb(248, 248, 248);
+    cursor: pointer;
+    display: inline-block;
+    font-family: Arial, sans-serif;
+    font-size: 1em;
+    height: 50px;
+    padding: 0 25px;
+    transition: all 200ms;
     width: 250px;
     border-radius: 50px !important;
-     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.151), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-left: 120px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.219), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 110px;
     
 }
-.button1{
-      width: 250px;
+.button-add:hover {
+    background-color: #414241;
+    transform: scale(1.05);
+}
+.button1-add{
+    background-color: #202221;
+    border-radius: 50px;
+    border-width: 0;
+    box-shadow: rgba(25, 25, 25, .04) 0 0 1px 0, rgba(0, 0, 0, .1) 0 3px 4px 0;
+    color: rgb(248, 248, 248);
+    cursor: pointer;
+    display: inline-block;
+    font-family: Arial, sans-serif;
+    font-size: 1em;
+    height: 50px;
+    padding: 0 25px;
+    transition: all 200ms;
+    width: 250px;
     border-radius: 50px !important;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.144), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-left: 150px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.219), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 120px;
+}
+.button1-add:hover {
+    background-color: #414241;
+    transform: scale(1.05);
 }
 
 
-
-.label{
+.label-add{
     color: rgb(5, 5, 5) !important;
     text-transform: none;
     font-size: 25px;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
 }
 
 .input-radio {
