--- a/frontend/src/component/seller/product/prodAddForm/prodAddForm.css
+++ b/frontend/src/component/seller/product/prodAddForm/prodAddForm.css
@@ -1,6 +1,13 @@
 h2{
     text-align: left;
 }
+.container-add-product {
+    padding: center;
+    padding-top: 70px;
+    position: relative;
+
+
+}
 .container7_add{
      width: 100%;
     height: 1800px;
@@ -12,13 +19,13 @@ h2{
 }
 
 
-.form_add{
+.form_add-product{
     background-color: rgba(255, 255, 255, 0.322);
     padding: 80px;
-    border-radius: 15px!important;
+    border-radius: 25px;
     display: inline-block;
     text-align: left;
-    
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
     width: 1054px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.507), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     height: 150%;
@@ -30,6 +37,7 @@ h2{
     height: 35px!important;
     box-sizing: border-box;
     border-radius: 1px!important;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
 }
 .text_add{
     width: 100%;
@@ -39,17 +47,49 @@ h2{
     
 }
     
-.button_add{
-    width: 200px;
-    border-radius: 50px !important;
-     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.151), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-left: 80px;
+.button_cancel_add{
+    background-color: #202221;
+        border-radius: 50px;
+        border-width: 0;
+        box-shadow: rgba(25, 25, 25, .04) 0 0 1px 0, rgba(0, 0, 0, .1) 0 3px 4px 0;
+        color: rgb(248, 248, 248);
+        cursor: pointer;
+        display: inline-block;
+        font-family: Arial, sans-serif;
+        font-size: 1em;
+        height: 50px;
+        padding: 0 25px;
+        transition: all 200ms;
+        width: 250px;
+        border-radius: 50px !important;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.219), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        margin-left: 120px;
     
 }
+.button_cancel_add:hover {
+    background-color: #414241;
+    transform: scale(1.05);
+}
 .button_create_add{
-      width: 200px;
-    border-radius: 50px !important;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.144), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-left: 300px;
+    background-color: #202221;
+        border-radius: 50px;
+        border-width: 0;
+        box-shadow: rgba(25, 25, 25, .04) 0 0 1px 0, rgba(0, 0, 0, .1) 0 3px 4px 0;
+        color: rgb(248, 248, 248);
+        cursor: pointer;
+        display: inline-block;
+        font-family: Arial, sans-serif;
+        font-size: 1em;
+        height: 50px;
+        padding: 0 25px;
+        transition: all 200ms;
+        width: 250px;
+        border-radius: 50px !important;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.219), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        margin-left: 120px;
+}
+.button_create_add:hover {
+    background-color: #414241;
+    transform: scale(1.05);
 }
 
