--- a/frontend/src/component/seller/product/productView/productView.css
+++ b/frontend/src/component/seller/product/productView/productView.css
@@ -58,8 +58,8 @@
     color: rgb(230, 0, 0);
     margin-top: 25px;
     font-size: 50px;
-    font-weight: bold;
     
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
     
 }
 
