--- a/frontend/src/component/user/shopping/product.css
+++ b/frontend/src/component/user/shopping/product.css
@@ -35,9 +35,10 @@
   justify-content:center;
 }
 .product-detail-container {
+
   display: flex;
-  gap: 70px;
-  margin: 40px;
+  gap: 80px;
+  margin: 150px;
   margin-top: 60px;
   color: #324d67 !important;
 
@@ -63,10 +64,13 @@
 .product-detail-desc h4 {
   display: flex;
   margin-top: 10px;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
 }
 
 .product-detail-desc p {
   margin-top: 10px;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
+  text-align: justify!important;
 }
 
 
@@ -93,20 +97,23 @@
 }
 
 .buttons .add-to-cart {
-  margin: 2rem 0;
-  margin-bottom: 3rem;
-  padding: 2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 2rem 0;
-  min-width: 1024px;
-  transition: transform 0.5s ease;
+background-color: #202221;
+  border-radius: 50px;
+  border-width: 0;
+  box-shadow: rgba(25, 25, 25, .04) 0 0 1px 0, rgba(0, 0, 0, .1) 0 3px 4px 0;
+  color: rgb(248, 248, 248);
+  cursor: pointer;
+  display: inline-block;
+  font-family: Arial, sans-serif;
+  font-size: 1em;
+  height: 50px;
+  padding: 0 25px;
+  transition: all 200ms;
 }
 
 .buttons .add-to-cart:hover {
-  
-  transform: scale(1.05, 1.05)
+  background-color: #414241;
+    transform: scale(1.05);
 }
 
 
@@ -121,21 +128,5 @@
   padding: 6px 12px;
   cursor: pointer;
 }
-
-.quantity-desc .minus {
-  border-right: 1px solid gray;
-  color: #f02d34;
-}
-
-.quantity-desc .num {
-  border-right: 1px solid gray;
-  font-size: 20px;
-}
-
-.quantity-desc .plus {
-  color: rgb(49, 168, 49);
-
-}
-
 
 
