cart-header,productview_css,product_css,cart_css

--- a/frontend/src/component/user/shopping/product.css
+++ b/frontend/src/component/user/shopping/product.css
@@ -129,4 +129,7 @@ background-color: #202221;
   cursor: pointer;
 }
 
-
+title {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
+  color: rgb(255, 0, 0);
+}
