--- a/frontend/src/component/admin/user/viewUser/viewUser.css
+++ b/frontend/src/component/admin/user/viewUser/viewUser.css
@@ -1,30 +1,28 @@
-.view-rectangle {
+.viewuser-rectangle {
     width: 850px;
     height: 100%;
     margin: auto;
-    margin-top: auto;
+    margin-top: -220px;
     border: 2px solid #ffffff !important;
   }
-.roleTopic{
-        font-size: 30px;
-        text-align: center;
-        color: black;
-        margin-top: 5px;
-        margin-right: 15px;
+.viewuser-roleTopic{
+    font-size: 30px;
+    text-align: center;
+    color: black;
+    margin-top: 5px;
+    margin-right: 15px;
 }
-.plusicon{
-    margin-left: 250px !important;
-    font-size: 25px !important;
-    margin-top: 45px !important;
-}
-.icon1 {
-    color: rgb(0, 0, 0);
-    margin-top: 5px !important;
-}
-.container{
+.viewuser-container{
     padding: 100px;
     padding-top: 10px;
     position:relative;
+}
+.viewuser-icon {
+    color: rgb(0, 0, 0);
+    margin-top: 5px !important;
+}
+.viewuser-icon:hover {
+    transform: translateY(-2px) scale(1.005) translateZ(0);
 }
 table{
     width:100%;
@@ -32,41 +30,40 @@ table{
     height: 50px !important;
     border-collapse: separate !important;
     border-spacing: 20px !important;
-   border: none;
-   border-bottom: none;
+    border: none;
+    border-bottom: none;
     border-radius: 25px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
     background-color: #75c6dc;
 }
-td{
+.viewuser-td1{
     font-size: larger;
     border-radius: 25px;
     background-color: rgb(250, 250, 250);
-    padding: 8px;  
-}
-.td0{
-    width: 80px !important;
-}
-.td1{
+    padding: 8px; 
     text-align:left;
     padding-left: 30px;
 }
-.td2{
-    width: 100px !important;
+.viewuser-td2{
+    font-size: larger;
+    border-radius: 25px;
+    background-color: rgb(250, 250, 250);
+    padding: 8px; 
+    text-align:left;
+    padding-left: 30px;
 }
-
-
-.icon {
-    color: #000000;
-
+.viewuser-td3{
+    font-size: larger;
+    border-radius: 25px;
+    background-color: rgb(250, 250, 250);
+    padding: 8px;
+    text-align:left;
+    padding-left: 30px;
 }
-
-.icon:hover {
-    transform: translateY(-2px) scale(1.005) translateZ(0);
-}
-
-
-.icon1:hover {
-    transform: translateY(-2px) scale(1.005) translateZ(0);
+.viewuser-td4{
+    font-size: larger;
+    border-radius: 25px;
+    background-color: rgb(250, 250, 250);
+    padding: 8px;
 }
