--- a/frontend/src/component/admin/adminNavbar/adminNavbar.css
+++ b/frontend/src/component/admin/adminNavbar/adminNavbar.css
@@ -1,23 +1,24 @@
-.adminbar{
+.admin-navbar{
     background-color: #D4F2FF !important;
     height: 70px;
+    
 }
-.companylogo{
+.admin-navbar-companylogo{
     margin-right: 100px;
 }
-.profilebutton{
+.admin-navbar-profilebtn{
+    margin-left: 800px !important;
+}
+.admin-navbar-profilebutton{
     background-color: #D4F2FF; /* Green*/
     border: none;
     display: inline-block;
     border-radius: 50%;
     cursor: pointer;
 }
-.profileimg{
+.admin-navbar-profileimg{
     size: 2px;;
     height: 50px;
     width: 50px;
     border-radius: 50%;
-}
-.profilebtn{
-    margin-left: 800px !important;
 }
