--- a/frontend/src/component/admin/role/addRole/addRole.css
+++ b/frontend/src/component/admin/role/addRole/addRole.css
@@ -1,23 +1,30 @@
-.add-rectangle {
-    width: 663px;
+.addrole-rectangle {
+    width: 550px;
     height: 100%;
     margin: auto;
-    margin-top: auto;
+    /* margin-top: auto; */
+    margin-top: -220px;
     border: 2px solid #ffffff !important;
   }
-.addroletopic{
+.addrole-topic{
     font-size: 30px;
     text-align: center;
     color: black;
     margin-top: 5px;
     margin-right: 15px;
 }
-.btnGrp{
+.addrole-formcontrol {
+  width: 100%;
+  height: 45px;
+  box-sizing: border-box;
+  border-radius: 50px !important;
+}
+.addrole-btnGrp{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.CancelBtn {
+.addrole-cancelBtn {
     padding: 10px 60px;
     text-align: center;
     font-size: 16px;
@@ -29,10 +36,10 @@
     cursor: pointer;
     margin: 40px;
 }
-.CancelBtn:hover {
+.addrole-cancelBtn:hover {
     background-color: #aee7f5;
   }
-  .Savebtn {
+  .addrole-savebtn {
     padding: 10px 60px;
     text-align: center;
     font-size: 16px;
@@ -44,21 +51,6 @@
     cursor: pointer;
     margin: 40px;
   }
-  .Savebtn:hover {
+  .addrole-savebtn:hover {
     background-color: #aee7f5;
   }
-
-
-
-.image3{
-    position: absolute;
-   left: 200px;
-}
-.form-control {
-  width: 100%;
-  height: 450px;
-  box-sizing: border-box;
-  border-radius: 50px !important;
-}
-
-
