--- a/frontend/src/component/admin/role/editRole/editRole.css
+++ b/frontend/src/component/admin/role/editRole/editRole.css
@@ -1,29 +1,35 @@
-.edit-rectangle{
-    width: 663px;
+.editrole-rectangle{
+    width: 550px;
     height: 100%;
     margin: auto;
-    margin-top: auto;
+    margin-top: -220px;
     border: 2px solid #ffffff !important;
 }
-.editroletopic{
+.editrole-topic{
     font-size: 30px;
     text-align: center;
     color: black;
     margin-top: 5px;
     margin-right: 15px;
 }
-.roleName{
+.editrole-roleName{
     font-size: 18px;
     text-align: left;
     color: black;
     margin-left: 10px;
 }
-.btnGrp{
+.editrole-formcontrol {
+    width: 100%;
+    height: 45px;
+    box-sizing: border-box;
+    border-radius: 50px !important;
+  } 
+.editrole-btnGrp{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.CancelBtn {
+.editrole-cancelBtn {
     padding: 10px 60px;
     text-align: center;
     font-size: 16px;
@@ -35,10 +41,10 @@
     cursor: pointer;
     margin: 40px;
 }
-.CancelBtn:hover {
+.editrole-cancelBtn:hover {
     background-color: #aee7f5;
   }
-  .Savebtn {
+  .editrole-savebtn {
     padding: 10px 60px;
     text-align: center;
     font-size: 16px;
@@ -50,69 +56,6 @@
     cursor: pointer;
     margin: 40px;
   }
-  .Savebtn:hover {
+  .editrole-savebtn:hover {
     background-color: #aee7f5;
   }
-
-
-
-
-
-
-
-
-
-.form1 {
-    background-color:rgba(252, 248, 248, 0.404);
-    padding: 80px;
-    
-    border-radius: 25px;
-    display: inline-block;
-    text-align: left;
-    
-    width: 1054px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.37), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    height: 150%;
-    margin: 100px;
-}
-
-.form-control {
-    width: 100%;
-    height: 45px;
-    box-sizing: border-box;
-    border-radius: 50px !important;
-}
-.button{
-    width: 250px;
-    border-radius: 50px !important;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.219), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-left: 120px;
-    
-}
-.button1{
-      width: 250px;
-    border-radius: 50px !important;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.219), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-left: 150px;
-}
-.link{
-    text-decoration: none;
-    color: black;
-}
-
-
-.label{
-    color: rgb(67, 1, 248) !important;
-    text-transform: none;
-    font-size: 25px;
-    text-align: left;
-}
-
-.input-radio {
-    display: inline-block;
-    
-}
-
-#additional{
-    height: 100px;
-}
