--- a/frontend/src/component/admin/user/editUser/editUser.css
+++ b/frontend/src/component/admin/user/editUser/editUser.css
@@ -2,55 +2,42 @@
     width: 500px;
     height: 100%;
     margin: auto;
-    margin-top: auto;
+    margin-top: -220px;
     border: 2px solid #ffffff !important;
 }
-.editusertopic{
+.edituser-topic{
     font-size: 30px;
     text-align: center;
     color: black;
     margin-top: 5px;
     margin-right: 15px;
 }
-.userName{
+.edituser-userName{
     font-size: 18px;
     text-align: left;
     color: black;
     margin-left: 10px;
 }
-.userRole{
+.edituser-userRole{
     font-size: 18px;
     text-align: left;
     color: black;
     margin-left: 10px;
 }
-.plusicon1{
+.edituser-plusicon{
     margin-left: 20px;
     font-size: 25px !important;
 }
-.icon1 {
+.edituser-icon {
     color: rgb(0, 0, 0);
     margin-top: -60px !important;
 }
-
-SplitButton{
-    color: #75c6dc;
-}
-.dropbtn{
-    color: #75c6dc;
-}
-.roledropbtn{
-    background-color: #75c6dc;
-}
-.roledropbtntopic{
-    
-}
-.btnGrp{
+.edituser-btnGrp{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.CancelBtn {
+.edituser-cancelBtn {
     padding: 10px 60px;
     text-align: center;
     font-size: 16px;
@@ -62,10 +49,10 @@ SplitButton{
     cursor: pointer;
     margin: 40px;
 }
-.CancelBtn:hover {
+.edituser-cancelBtn:hover {
     background-color: #aee7f5;
   }
-.Savebtn {
+.edituser-savebtn {
     padding: 10px 60px;
     text-align: center;
     font-size: 16px;
@@ -77,7 +64,7 @@ SplitButton{
     cursor: pointer;
     margin: 40px;
   }
-.Savebtn:hover {
+.edituser-savebtn:hover {
     background-color: #aee7f5;
   }
 
