--- a/frontend/src/component/seller/product/productupdate/productUpdateForm.css
+++ b/frontend/src/component/seller/product/productupdate/productUpdateForm.css
@@ -6,12 +6,10 @@ h2 {
     width: 100%;
     height: 1800px;
     background-color: rgba(212, 242, 255, 1);
+    background-image: url("../../../assets/kimono-baby-sweater-crochet-pattern_ccexpress 2.png");
+    background-repeat: no-repeat;
 }
 
-.image4_update {
-    position: absolute;
-    left: 250px;
-}
 
 
 .form4_update {
