--- a/frontend/src/component/user/wish-list/wish.css
+++ b/frontend/src/component/user/wish-list/wish.css
@@ -80,3 +80,12 @@
     display: flex;
     justify-content: center;
 }
+.List-empty {
+    display: flex;
+    justify-content: center;
+    font-size: larger;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
+    font-weight: bold;
+
+
+}
