add authentications and deferentiat cart and wish list by user

--- a/frontend/src/component/admin/category/updateCategory/updateCategory.css
+++ b/frontend/src/component/admin/category/updateCategory/updateCategory.css
@@ -36,7 +36,7 @@ h1{
     margin: 100px;
 }
 
-.form-control {
+.form-control-update {
     width: 100%;
     height: 45px;
     box-sizing: border-box;
