--- a/frontend/src/component/admin/privilege/showPrivilege/showPrivilege.css
+++ b/frontend/src/component/admin/privilege/showPrivilege/showPrivilege.css
@@ -1,49 +1,42 @@
 .container2{
     width: 100%;
     height: 800px;
-    background-color: rgba(212, 242, 255, 1);  
-
+    background-color: rgba(212, 242, 255, 1);
 }
 
 .container{
     padding: 150px;
     padding-top: 150px;
     position: relative;
-    
-
 }
-.image1{
-    position: absolaute;
-    left: 5px;
-}
+ 
 
 .font{
-    
-    color:rgb(230, 0, 0);
-    text-align: left;
-    text-shadow: rgba(0, 0, 0, 0.521);
-    font-size:30px;
+    display: inline-block;
+    color: black; 
+    margin-top: 0px;
+    font-size: 30px; 
+    font-weight: bold;
 }
 
-table{
+.headtable{
     width: 100%;
     font-size: larger;
     height: 100px;
     border-collapse: separate !important;
     border-spacing: 20px !important;
-   border: none;
-   border-bottom: none;
+    border: none;
+    border-bottom: none;
     border-radius: 25px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);   
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
     background-color: white;
 }
 
 td{
-
     font-size: larger;
     border-radius: 25px;
     background-color: rgb(250, 250, 250);
-    padding: 8px;    
+    padding: 8px;  
 }
 
 .td0{
@@ -59,24 +52,20 @@ td{
     width: 100px !important;
 }
 
-.plusicon{
-    margin-left: 1000px;
-    font-size: 35px !important;
-}
-
 .icon {
-    color: rgb(247, 73, 73);
-
+    color: #698f99; 
 }
-
+ 
 .icon:hover {
     transform: translateY(-2px) scale(1.005) translateZ(0);
 }
-.icon1 {
-    color: rgb(0, 0, 0);
 
+.iconone {
+    display: inline-block;
+    color: #698f99; 
+    margin-left: 0px;
 }
 
-.icon1:hover {
-    transform: translateY(-2px) scale(1.005) translateZ(0);
+.iconone:hover {
+    transition: all 0.5s ease;
 }
