--- a/frontend/src/component/seller/merchantApplication/merchantApplication.css
+++ b/frontend/src/component/seller/merchantApplication/merchantApplication.css
@@ -1,11 +1,11 @@
 h2{
     text-align: left;
-    font-size: small;
+    font-size:xx-small;
     color: #b5d6de; 
     font-weight: bold;
 }
 
-.containerFour_add{
+.containerHead_add{
     margin-top: -50px!important;
     width: 100%;
     height: 2000px;
