--- a/frontend/src/component/admin/user/editUser/editUser.css
+++ b/frontend/src/component/admin/user/editUser/editUser.css
@@ -18,7 +18,7 @@
     color: black;
     margin-left: 10px;
 }
-.edituser-userRole{
+.edituser-userrole{
     font-size: 18px;
     text-align: left;
     color: black;
