--- a/frontend/src/component/admin/category/viewCategory/viewCategory.css
+++ b/frontend/src/component/admin/category/viewCategory/viewCategory.css
@@ -21,11 +21,11 @@
 }
 .font-category{
     
-    color:rgb(230, 0, 0);
+    color:black;
     text-align: center;
     text-shadow: rgba(0, 0, 0, 0.521);
     font-size:40px;
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
+    font-family: Montserrat;
     display: inline-block;
     margin-right: 10px;
    
@@ -38,33 +38,38 @@
     border-collapse: separate !important;
     border-spacing: 20px !important;
     border: none;
+    justify-content: center;
     border-bottom: none;
     border-radius: 25px;
+    
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background-color: rgba(88, 6, 6, 0.404);
+    background-color:rgba(255, 255, 255, 0.856);
 }
 
 .td0-category{
     width: 80px !important;
         font-size: larger;
             border-radius: 25px;
-            background-color: rgb(250, 250, 250);
+            
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            background-color: rgb(255, 254, 254);
             padding: 8px;
 }
 .td1-category{
     text-align:left;
     padding-left: 30px;
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
+    font-family: Montserrat;
         font-size: larger;
             border-radius: 25px;
-            background-color: rgb(250, 250, 250);
+            /* background-color: rgb(255, 255, 255); */
             padding: 8px;
 }
 .td2-category{
     width: 100px !important;
         font-size: larger;
+            
             border-radius: 25px;
-            background-color: rgb(250, 250, 250);
+            background-color: rgb(255, 254, 254);
             padding: 8px;
 }
 .plusicon-category{
@@ -77,7 +82,7 @@
 
 
 .icon-category {
-    color: rgb(247, 73, 73);
+    color: rgb(54, 133, 139);
 
 }
 
@@ -85,7 +90,7 @@
     transform: translateY(-2px) scale(1.005) translateZ(0);
 }
 .icon1-category {
-    color: rgb(255, 0, 0);
+    color: rgb(54,133, 139);
 
 }
 
