--- a/frontend/src/component/seller/product/productupdate/productUpdateForm.css
+++ b/frontend/src/component/seller/product/productupdate/productUpdateForm.css
@@ -46,7 +46,7 @@ h2 {
         color: rgb(248, 248, 248);
         cursor: pointer;
         display: inline-block;
-        font-family: Arial, sans-serif;
+        font-family: Montserrat;
         font-size: 1em;
         height: 50px;
         padding: 0 25px;
@@ -69,7 +69,7 @@ h2 {
             color: rgb(248, 248, 248);
             cursor: pointer;
             display: inline-block;
-            font-family: Arial, sans-serif;
+            font-family: Montserrat;
             font-size: 1em;
             height: 50px;
             padding: 0 25px;
