--- a/frontend/src/component/user/shopping/product.css
+++ b/frontend/src/component/user/shopping/product.css
@@ -64,20 +64,12 @@
 .product-detail-desc h4 {
   display: flex;
   margin-top: 10px;
-  font-family: source-code-pro,
-    Menlo,
-    Monaco,
-    Consolas,
-    'Courier New';
+  font-family: Montserrat;
 }
 
 .product-detail-desc p {
   margin-top: 10px;
-  font-family: source-code-pro,
-    Menlo,
-    Monaco,
-    Consolas,
-    'Courier New';
+  font-family: Montserrat;
   text-align: justify!important;
 }
 
@@ -112,7 +104,7 @@ background-color: #202221;
   color: rgb(248, 248, 248);
   cursor: pointer;
   display: inline-block;
-  font-family: Arial, sans-serif;
+  font-family: Montserrat;
   font-size: 1em;
   height: 50px;
   padding: 0 25px;
@@ -139,4 +131,6 @@ background-color: #202221;
 
 .pointer{
   cursor: pointer;
+  font-family: Montserrat;
 }
+
