--- a/frontend/src/component/user/shopping/product.css
+++ b/frontend/src/component/user/shopping/product.css
@@ -134,3 +134,15 @@ background-color: #202221;
   font-family: Montserrat;
 }
 
+.p-product{
+    text-align: justify !important;
+      margin: top 2px !important;
+      
+      font-size: 1rem;
+      font-weight: normal;
+      font-family: Montserrat;
+}
+.h-product{
+  font-family: Montserrat;
+    color: rgb(252, 0, 0);
+}
