--- a/frontend/src/component/seller/merchant/profileView/profileView.css
+++ b/frontend/src/component/seller/merchant/profileView/profileView.css
@@ -1,24 +1,18 @@
 .head1{
     background-color: rgba(212, 242, 255, 1);
-    background-image: url(https://www.alisonwinterroth.com/wp-content/uploads/2021/08/Newborn-baby-portraits-Slideshow-3020.jpg);
+    background-image: url(https://img.freepik.com/free-vector/rainbow-frame-cute-doodle-border-vector_53876-135969.jpg?t=st=1655876343~exp=1655876943~hmac=6271894418cae23c0f3a8e9fb2d59e64af28f2ad93a1427509077660784c8a65&w=996);
     background-repeat: no-repeat;
-    background-size: cover;    
+    background-size: cover;
 }
-
-.wrapper_view {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(21rem, 21rem));
-    gap: 3rem;
-    justify-content: space-between;
-    padding: 10px 420px;
-}
+ 
 
 .card_merchant_view {
-    width: 1000px;
+    width: 250px;
     overflow: hidden;
     background-color: rgba(255, 255, 255, 0.295) !important;
     /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.39) !important; */
     border-radius: 15px !important;
+     
 }
 
 .card_merchant_view:hover {
@@ -26,24 +20,8 @@
 }
 
 .card__media_view {
-    padding: auto;
-}
-
-.icon_button{
-    margin-left: 15px !important;
-    margin-bottom: 20px !important;
-}
-
-.icon_button_second {
-    justify-items: right;       
-}
-
-.view_icon {
-    color: #698f99; 
-}
-
-.view_icon:hover {
-    transition: all 0.5s ease;
+    padding: 20px 20px 20px 20px;
+    border-radius: 100%;
 }
 
 .header_view{
@@ -54,28 +32,61 @@
 
 .font_view {
     display: inline-block;
-    color: black; 
+    color: rgb(127, 127, 127);; 
     margin-top: 25px;
     font-size: 30px;   
 }
 
  .header{
-     font-size: x-large;    
+     font-size: small; 
+     font-weight: bold;   
  }
-
- .infocard{
-     display: flex;
- }
-
  
 
+ .cardHead{
+    display: flex;
+    
+    /* grid-template-columns: repeat(auto-fit, minmax(21rem, 21rem)); */
+    gap: 3rem;  
+    padding: 0px 100px;
+     
+ }
 
+ .content{
+    width: 1000px;
+    border-radius: 10px !important;
+ }
+ 
+ .inner{
+    display: flex;
+ }
+ 
+ .infocard{
+    text-align: left;
+    font-family: montserrat;
+ }
 
+.input{
+    color: rgb(127, 127, 127);
+    font-family: montserrat;
+}
 
+.button {
+    border: none;
+    border-radius: 30px;
+    margin-top: 25px;
+    padding: 10px 30px 10px 30px;
+    background-color: #698f99; 
+    color: black;
+    cursor: pointer;
+    font-weight: 500;
+    transition: all 0.5s ease;
+}
 
-
-
-
+.view_icon {
+    color: #698f99; 
+    border-radius: 10px;
+}
 
 
 
