--- a/frontend/src/component/seller/merchant/addProfileDetails/addProfileDetails.css
+++ b/frontend/src/component/seller/merchant/addProfileDetails/addProfileDetails.css
@@ -1,50 +1,69 @@
 h2{
     text-align: left;
     font-size: small;
+    font-family: 'Montserrat' ;
     color: #b5d6de; 
     font-weight: bold;
 }
 
 .containerFour_add{
-    margin-top: -50px!important;
+    margin-top: 0px!important;
     width: 100%;
     height: 2000px;
     background-color: white;
+    /* margin-left: 300px; */
 }
 
 .form-controlOne_add {
+
     width: 100%;
-    height: 35px;
+    height: 40px;
     box-sizing: border-box;
-    border-radius: 3px;
-     
+    border-radius: 30px;
+    font-family: 'Montserrat' ;
+    text-align: left;
 }
 
 .text1_add{
     width: 100%;
     box-sizing: border-box;
     border-radius: 15px !important;
-     
+    font-family: 'Montserrat' ;
+    text-align: left;
 }
     
 .button4_add{
     border: none;
     border-radius: 20px;
-    margin-top: 25px;
+    margin-top: 20px;
+    margin-left: 50px;
     padding: 15px 35px 15px 35px;
     background-color: #d4f2ff;
     cursor: pointer;
     font-weight: 500;
     transition: all 0.5s ease;
-      
+    font-family: 'Montserrat' ; 
 }
 
 p{
     color: black;
     font-size: 18px;
     font-weight: bold;
+    font-family: 'Montserrat' ;
+    text-align: left;
 }
 
 
- 
+.form4_add {
+    background-color: rgba(255, 255, 255, 0.322);
+    padding: 80px;
+    border-radius: 25px;
+    display: inline-block;
+    text-align: left;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
+    width: 1054px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.507), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    height: 150%;
+    margin: 100px;
+}
 
