--- a/frontend/src/component/seller/merchantApplication/merchantApplication.css
+++ b/frontend/src/component/seller/merchantApplication/merchantApplication.css
@@ -6,9 +6,9 @@ h2{
 }
 
 .containerHead_add{
-    margin-top: -50px!important;
+    margin-top: 0px!important;
     width: 100%;
-    height: 2000px;
+    height: 2800px;
     background-color: white;
 }
 
@@ -45,6 +45,20 @@ p{
     font-weight: bold;
 }
 
+/* span{
+    font-size: 12px;
+    padding: 3px;
+    color: red;
+    display: none;
+}
 
- 
+input:invalid[focused="true"] {
+    border: solid red;
+}
+
+input:invalid[focused="true"] ~ span{
+    display: block;
+    margin-left:200px ;
+}
+  */
 
