--- a/frontend/src/component/user/shoppingcart/cart.css
+++ b/frontend/src/component/user/shoppingcart/cart.css
@@ -1,6 +1,11 @@
    .h4-cart {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
-    color: rgb(252, 0, 0);
+    font-family:'Montserrat';
+    color: black;
+    font-weight: bolder;
+   }
+
+   .p{
+    font-weight: lighter;
    }
 
    .p-cart,.p-cart-q{
@@ -8,11 +13,14 @@
     margin: top 2px !important;;
     font-size: 1rem;  
     font-weight: normal;
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
+    font-family: 'Montserrat';
+    color: red;
    }
    .p-cart-q{
-    color: rgb(252, 0, 0);
+    color: gray;
+    font-family:'Montserrat';
    }
+
 .item-description{
     text-align: left !important;
     margin: 1rem;
@@ -31,7 +39,7 @@
    justify-content: center;
 }
 .border-cart {
-    border: 2px solid rgb(101, 207, 253);
+    border: 2px solid white;
     display: flex;
     justify-content: center;
     border-radius: 10px;
@@ -44,16 +52,17 @@
     height: 180px;
     margin-left: 120px;
     border-radius: 15px !important;
-    background-color: rgba(212, 242, 255, 0.322) !important;
+    
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.39) !important;
     transition: all 0.5s ease;
     display: flex;
-        justify-content: left;
+    justify-content: left;
        
     } 
+
 .item-div-image:hover{
     color: gray;
-        transform: scale(1.015);
+    transform: scale(1.015);
 }
 
 
@@ -69,14 +78,14 @@
 
 .btn-increase { 
           
-    color: rgb(252, 0, 0);
+    color: rgb(44, 189, 202);
 }
         
     
 .btn-decrease,
 .btn-trash {   
         
-        color: rgb(252, 0, 0) !important;
+        color: rgb(0, 0, 0) !important;
         
         }
  .item-image {
@@ -87,7 +96,7 @@
      }
 
 .Cart-header{
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
+    font-family: 'Montserrat';
     font-weight: bold;
     display: flex;
      justify-content: center;
@@ -96,8 +105,17 @@
     display: flex;
     justify-content: center;
     font-size: larger;
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
-        font-weight: bold;
+    font-family:'Montserrat';
+    font-weight: bold;
        
    
+}
+
+.item-description{
+    display: flex;
+    gap: 100px;
+}
+
+.checkout{
+    text-align: center;
 }
