--- a/frontend/src/component/seller/product/productView/productView.css
+++ b/frontend/src/component/seller/product/productView/productView.css
@@ -11,7 +11,7 @@
     
 }
 
-.card_product_view {
+.card_product_view_pro {
     overflow: hidden;
     background-color: rgba(255, 255, 255, 0.295) !important;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.39) !important;
