--- a/frontend/src/component/seller/product/productupdate/productUpdateForm.css
+++ b/frontend/src/component/seller/product/productupdate/productUpdateForm.css
@@ -16,22 +16,22 @@
 
 .form4_update {
     background-color: rgba(255, 255, 255, 0.322);
-    padding: 80px;
-    border-radius: 25px;
-    display: inline-block;
-    text-align: left;
-
-    width: 1054px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.507), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    height: 150%;
-    margin: 100px;
+        padding: 80px;
+        border-radius: 25px;
+        display: inline-block;
+        text-align: left;
+        font-family: Montserrat;
+        width: 1054px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.507), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        height: 150%;
+        margin: 100px;
 }
 
 .form-control1_update {
-    width: 100%;
-    height: 35px;
-    box-sizing: border-box;
-    border-radius: 3px;
+    height: 35px !important;
+        box-sizing: border-box;
+        border-radius: 15px !important;
+        font-family: Montserrat;
 }
 
 .text1_update {
@@ -50,13 +50,13 @@ background-color: #202221;
     display: inline-block;
     font-family: Montserrat;
     font-size: 1em;
-    height: 50px;
+    height: 30px;
     padding: 0 25px;
     transition: all 200ms;
-    width: 250px;
+    width: 200px;
     border-radius: 50px !important;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.219), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-left: 100px;
+    margin-left: 90px;
 
 }
 .button4_update:hover {
@@ -73,13 +73,13 @@ background-color: #202221;
         display: inline-block;
         font-family: Montserrat;
         font-size: 1em;
-        height: 50px;
+        height: 30px;
         padding: 0 25px;
         transition: all 200ms;
-        width: 250px;
+        width: 200px;
         border-radius: 50px !important;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.219), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        margin-left: 100px;
+        margin-left: 90px;
 }
 .button5_update:hover {
     background-color: #414241;
