--- a/frontend/src/component/seller/product/productupdate/productUpdateForm.css
+++ b/frontend/src/component/seller/product/productupdate/productUpdateForm.css
@@ -1,5 +1,7 @@
-h2 {
+.h2-update {
     text-align: left;
+    color: rgb(71, 183, 200);
+    font-size: 30px;
 }
 
 .container7_update {
@@ -69,7 +71,7 @@ background-color: #202221;
         color: rgb(248, 248, 248);
         cursor: pointer;
         display: inline-block;
-        font-family: Arial, sans-serif;
+        font-family: Montserrat;
         font-size: 1em;
         height: 30px;
         padding: 0 25px;
@@ -79,29 +81,7 @@ background-color: #202221;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.219), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         margin-left: 90px;
 }
-.button3_update:hover {
-    background-color: #414241;
-    transform: scale(1.05);
-}
-.button4_update {
-        background-color: #202221;
-            border-radius: 50px;
-            border-width: 0;
-            box-shadow: rgba(25, 25, 25, .04) 0 0 1px 0, rgba(0, 0, 0, .1) 0 3px 4px 0;
-            color: rgb(248, 248, 248);
-            cursor: pointer;
-            display: inline-block;
-            font-family: Arial, sans-serif;
-            font-size: 1em;
-            height: 50px;
-            padding: 0 25px;
-            transition: all 200ms;
-            width: 250px;
-            border-radius: 50px !important;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.219), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-            margin-left: 120px;
-}
-.button4_update:hover {
+.button5_update:hover {
     background-color: #414241;
     transform: scale(1.05);
 }
