--- a/frontend/src/component/admin/category/updateCategory/updateCategory.css
+++ b/frontend/src/component/admin/category/updateCategory/updateCategory.css
@@ -1,6 +1,6 @@
 .container5{
     width: 100%;
-    height: 900px;
+    height: 800px;
     background-color: rgba(212, 242, 255, 1);
 }
 .container-update {
@@ -15,10 +15,11 @@
     left: 300px;
 }
 
-h1{
+.h1-update-cat{
+    color: black;
     text-align: left;
-    color: rgb(255, 7, 7);
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
+    font-size: 40px;
+    font-family: Montserrat;
 }
 
 
@@ -67,7 +68,7 @@ h1{
     transform: scale(1.05);
 }
 .button1{
-    background-color: #202221;
+    background-color: rgb(71, 183, 200);
         border-radius: 50px;
         border-width: 0;
         box-shadow: rgba(25, 25, 25, .04) 0 0 1px 0, rgba(0, 0, 0, .1) 0 3px 4px 0;
@@ -94,11 +95,11 @@ h1{
 }
 
 
-.label{
-    color: rgb(67, 1, 248) !important;
+.label-cat-update{
+    color: rgb(5, 5, 5) !important;
     text-transform: none;
     font-size: 25px;
-    text-align: left;
+    font-family: Montserrat;
 }
 
 .input-radio {
