--- a/frontend/src/component/seller/product/prodAddForm/prodAddForm.css
+++ b/frontend/src/component/seller/product/prodAddForm/prodAddForm.css
@@ -7,6 +7,7 @@
 .label-product{
     color: black;
     font-weight: bold;
+    font-family: Montserrat;
 }
 
 .container-add-product {
@@ -16,7 +17,7 @@
 }
 .container7_add{
      width: 100%;
-    height: 1800px;
+    height: 1600px;
     background-color: rgba(212, 242, 255, 1);
 }
 .image_add{
@@ -76,42 +77,7 @@
     background-color: #414241;
     transform: scale(1.05);
 }
-.button_create_add{
-    background-color: #202221;
-        border-radius: 50px;
-        border-width: 0;
-        box-shadow: rgba(64, 173, 181, 0.04) 0 0 1px 0, rgba(0, 0, 0, .1) 0 3px 4px 0;
-        color: rgb(248, 248, 248);
-        cursor: pointer;
-        display: inline-block;
-        font-family: Montserrat;
-        font-size: 1em;
-        height: 50px;
-        padding: 0 25px;
-        transition: all 200ms;
-        width: 250px;
-        border-radius: 50px !important;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.219), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        margin-left: 120px;
-}
-.button_create_add {
-    background-color: #202221;
-    border-radius: 50px;
-    border-width: 0;
-    box-shadow: rgba(25, 25, 25, .04) 0 0 1px 0, rgba(0, 0, 0, .1) 0 3px 4px 0;
-    color: rgb(248, 248, 248);
-    cursor: pointer;
-    display: inline-block;
-    font-family: Montserrat;
-    font-size: 1em;
-    height: 50px;
-    padding: 0 25px;
-    transition: all 200ms;
-    width: 250px;
-    border-radius: 50px !important;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.219), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-left: 120px;
-}
+
 .button_create_add-pro {
     background-color: rgb(71, 183, 200);
     border-radius: 50px;
@@ -131,7 +97,7 @@
     margin-left: 120px;
 }
 
-.button_create_add:hover {
+.button_create_add-pro:hover {
     background-color: #414241;
     transform: scale(1.05);
 }
