--- a/frontend/src/component/seller/product/productupdate/productUpdateForm.css
+++ b/frontend/src/component/seller/product/productupdate/productUpdateForm.css
@@ -1,21 +1,30 @@
 .h2-update {
     text-align: left;
-    color: rgb(71, 183, 200);
+    color: rgb(71, 183, 200) !important;
     font-size: 30px;
+    font-family: Montserrat;
 }
 
 .container7_update {
     width: 100%;
-    height: 1800px;
-    background-color: rgba(212, 242, 255, 1);
+    height: 1600px;
+background-color: rgba(212, 242, 255, 1);
     background-image: url("../../../assets/kimono-baby-sweater-crochet-pattern_ccexpress 2.png");
     background-repeat: no-repeat;
 }
 
-
-
+.container-update{
+    padding: center;
+        padding-top: 70px;
+        position: relative;
+}
+.label-product-update {
+    color: black;
+    font-weight: bold;
+    font-family: Montserrat;
+}
 .form4_update {
-    background-color: rgba(255, 255, 255, 0.322);
+    background-color: rgba(255, 255, 255, 0.651);
         padding: 80px;
         border-radius: 25px;
         display: inline-block;
@@ -38,6 +47,7 @@
     width: 100%;
     box-sizing: border-box;
     border-radius: 15px !important;
+    height: 300px !important;
 }
 
 .button4_update {
@@ -50,13 +60,13 @@ background-color: #202221;
     display: inline-block;
     font-family: Montserrat;
     font-size: 1em;
-    height: 30px;
+    height: 50px;
     padding: 0 25px;
     transition: all 200ms;
-    width: 200px;
+    width: 250px;
     border-radius: 50px !important;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.219), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-left: 90px;
+    margin-left: 120px;
 
 }
 .button4_update:hover {
@@ -73,13 +83,13 @@ background-color: #202221;
         display: inline-block;
         font-family: Montserrat;
         font-size: 1em;
-        height: 30px;
+        height: 50px;
         padding: 0 25px;
         transition: all 200ms;
-        width: 200px;
+        width: 250px;
         border-radius: 50px !important;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.219), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        margin-left: 90px;
+        margin-left: 120px;
 }
 .button5_update:hover {
     background-color: #414241;
